kubernetes/yaml/service-mesh/envoy/envoy-to-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  ports:
  - name: http
    port: 10000
    targetPort: 10000
  - name: admin
    port: 9901 
    targetPort: 9901
  selector:
    app: envoy
