kubernetes/yaml/service-mesh/envoy/envoy-to-service/svc-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx 
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80 
  selector:
    run: nginx
